# blogpost_inarte

./: README.md  pyproject.toml
src/blogpost_inarte/: crew.py  main.py
